Logic of player states is fixed: now we change not separate player states, but all initial players for trainings list so that it can be visible from parent component, and we can make query now

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1099,7 +1099,7 @@ body::-webkit-scrollbar {
 }
 .player-absent{
   background: rgba(0, 0, 0, 0.7);
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(0, 0, 0, 1);
 }
 
 .add-training-modal-top-panel {
